{
    "name": "MainInput",
    "maps": [
        {
            "name": "MainMenu",
            "id": "4618efb7-44f4-4354-957d-8036f627356a",
            "actions": [
                {
                    "name": "Play",
                    "type": "Button",
                    "id": "672a0fd2-d5e3-43b8-b21b-4884555a407b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "eae9c915-80b0-4200-99f1-f96567d8b3d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "8ee8f4a2-7a7d-4f96-8d32-c4ec44063c82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b8c8c8f-1230-47e4-b253-63942fb3695c",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Play",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c257186-d7ff-475f-8222-7fa97a35243a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2101171-15cb-48f2-a386-0b2a29176c21",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BattleActions",
            "id": "dbfd6c29-fd0c-4107-9288-e7cde97eceb2",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "95f07def-6942-4391-a972-965e1cec9aa0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a1b5c8f0-8cbd-471c-8762-8285c122edec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c01cc124-10b2-49be-813b-93eb80a2f6e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "PC",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8883075d-c7a3-42ff-a79e-6e4e3bded7f3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NormalActions",
            "id": "3b64f373-267e-4a05-896a-3e771f140261",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "f124ff13-ee6c-4e4b-a47b-a4c22eb03a9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "598bf107-8cdb-4f14-81d7-61abc156107e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}